--- a/index.html
+++ b/index.html
@@ -103,7 +103,31 @@
          </li>
      </ul>
    
- </section> 
+ </section>
+ <!-- our clients--> 
+ <section class="container services">
+     <h2 class="whatwedo">Постоянные клиенты</h2>
+     <ul class="clients-list">
+         <li><a href=""><svg>
+             <use href="./images/symbol-defs.svg#icon-yaco-1"></use>
+         </svg></a></li>
+         <li><a href=""><svg>
+             <use href="./images/symbol-defs.svg#icon-tagline-2"></use>
+         </svg></a></li>
+         <li><a href=""><svg>
+             <use href="./images/symbol-defs.svg#icon-company-3"></use>
+         </svg></a></li>
+         <li><a href=""><svg>
+             <use href="./images/symbol-defs.svg#icon-foster-4"></use>
+         </svg></a></li>
+         <li><a href=""><svg>
+             <use href="./images/symbol-defs.svg#icon-brand-5"></use>
+         </svg></a></li>
+         <li><a href=""><svg>
+             <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+         </svg></a></li>
+     </ul>
+ </section>
 </main>
 <footer> 
    <div class="footer-container">
