--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </ul>
 </nav>  
         <ul class="nav-links">
-            <li class="head-items"><a href="mailto:info@devstudio.com" class="phone-color">info@devstudio.com</a></li>
+            <li class="head-items"><a href="mailto:info@devstudio.com" class="phone-color"><svg>
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+            </svg> info@devstudio.com</a></li>
             <li class="head-items"><a href="tel:380961111111" class="phone-color">+38 096 111 11 11</a></li>
         </ul>
         </div>
