--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         </ul>
 </nav>  
         <ul class="nav-links">
-            <li class="head-items"><a href="mailto:info@devstudio.com" class="phone-color"><svg>
+            <li class="head-items"><a href="mailto:info@devstudio.com" class="phone-color"><svg class="phonesvg" width="16px" height="12px">
+                <use href="./images/symbol-defs.svg#icon-konvert"></use>
+            </svg>info@devstudio.com</a></li>
+            <li class="head-items"><a href="tel:380961111111" class="phone-color"><svg class="phonesvg" width="10px" height="16px">
                 <use href="./images/symbol-defs.svg#icon-phone"></use>
-            </svg> info@devstudio.com</a></li>
-            <li class="head-items"><a href="tel:380961111111" class="phone-color">+38 096 111 11 11</a></li>
+            </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
     </header>
@@ -79,14 +81,51 @@
              <img src="images/1.jpg" alt="photo" width="270">
              <div class="name-ocupation">
              <h3 class="names">Игорь Демьяненко</h3>
-             <p class="occupation">Product Designer</p>
-            </div>
-         </li>
+             <p class="occupation">Product Designer</p>            
+             <ul class="social-list">
+                 <li><a href="#" class="link-flow">
+                     <svg class="ikonssvg" width="20px" height="20px">
+                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                         </svg></a></li>
+                 <li><a href=""  class="link-flow">
+                         <svg width="20px" height="20px">
+                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                         </svg></a></li>
+                 <li><a href=""  class="link-flow">
+                      <svg width="20px" height="20px">
+                              <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                          </svg></a></li>
+                 <li><a href=""  class="link-flow">
+                     <svg width="20px" height="20px">
+                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                         </svg></a></li>
+             </ul>
+             </div>
+            </li>
+       
          <li class="collegues-list shadow">
              <img src="images/2.jpg" alt="photo" width="270">
          <div class="name-ocupation">
              <h3 class="names">Ольга Репина</h3>
              <p class="occupation">Frontend Developer</p>
+    <ul class="social-list">
+        <li><a href="#" class="link-flow">
+                <svg class="ikonssvg" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg></a></li>
+        <li><a href="" class="link-flow">
+                <svg width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg></a></li>
+        <li><a href="" class="link-flow">
+                <svg width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg></a></li>
+        <li><a href="" class="link-flow">
+                <svg width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg></a></li>
+    </ul>
          </div>
          </li>
          <li class="collegues-list shadow">
@@ -94,6 +133,24 @@
               <div class="name-ocupation">
              <h3 class="names">Николай Тарасов</h3>
              <p class="occupation">Marketing</p>
+        <ul class="social-list">
+            <li><a href="#" class="link-flow">
+                    <svg class="ikonssvg" width="20px" height="20px">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg></a></li>
+            <li><a href="" class="lin
+                    <svg width="20px" height="20px">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg></a></li>
+            <li><a href="" class="link-flow">
+                    <svg width="20px" height="20px">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg></a></li>
+            <li><a href="" class="link-flow">
+                    <svg width="20px" height="20px">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg></a></li>
+         </ul>
             </div>
          </li>
          <li class="collegues-list shadow">
@@ -101,6 +158,24 @@
               <div class="name-ocupation">
              <h3 class="names">Михаил Ермаков</h3>
              <p class="occupation">UI Designer</p>
+<ul class="social-list">
+<li><a href="#" class="link-flow">
+    <svg class="ikonssvg" width="20px" height="20px">
+            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+        </svg></a></li>
+<li><a href=""  class="link-flow">
+        <svg width="20px" height="20px">
+             <use href="./images/symbol-defs.svg#icon-twitter"></use>
+        </svg></a></li>
+<li><a href=""  class="link-flow">
+    <svg width="20px" height="20px">
+            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+         </svg></a></li>
+<li><a href=""  class="link-flow">
+    <svg width="20px" height="20px">
+            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+        </svg></a></li>
+</ul>
             </div>
          </li>
      </ul>
