--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <svg class="ikonssvg" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg></a></li>
-            <li><a href="" class="lin
+            <li><a href="" class="link-flow">
                     <svg width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg></a></li>
@@ -150,7 +150,7 @@
                     <svg width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg></a></li>
-         </ul>
+        </ul>
             </div>
          </li>
          <li class="collegues-list shadow">
