--- a/index.html
+++ b/index.html
@@ -44,11 +44,22 @@
     </div>
         </section>    
     <!--our services -->
-    <section  class="container services">       
+    <section  class="container services"> 
+        <ul class="service-ikons"><li class="pic-border"><svg width="70px" height="70px">
+            <use href="./images/symbol-defs.svg#icon-antena1"></use>
+        </svg></li>
+        <li class="pic-border"><svg width="70px" height="70px">
+            <use href="./images/symbol-defs.svg#icon-timer2"></use>
+        </svg></li>
+        <li class="pic-border"><svg width="70px" height="53px">
+            <use href="./images/symbol-defs.svg#icon-dator3"></use>
+        </svg></li>
+        <li class="pic-border"><svg width="70px" height="70px">
+            <use href="./images/symbol-defs.svg#icon-cosmonavt4"></use>
+        </svg></li></ul>      
 <ul  class="what-we-do-list">
     <li class="service-list">
-        <h3 class="ourquality">Внимание к деталям</h3>
-        <!--br убрать или добавить ко всем текстам этой секции посмотрим-->
+        <h3 class="ourquality">Внимание к деталям</h3>    
         <p class="text-color">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
     </li>
     <li class="service-list">
@@ -88,15 +99,15 @@
                              <use href="./images/symbol-defs.svg#icon-instagram"></use>
                          </svg></a></li>
                  <li><a href=""  class="link-flow">
-                         <svg width="20px" height="20px">
+                         <svg class="ikonssvg" width="20px" height="20px">
                              <use href="./images/symbol-defs.svg#icon-twitter"></use>
                          </svg></a></li>
                  <li><a href=""  class="link-flow">
-                      <svg width="20px" height="20px">
+                      <svg class="ikonssvg" width="20px" height="20px">
                               <use href="./images/symbol-defs.svg#icon-facebook"></use>
                           </svg></a></li>
                  <li><a href=""  class="link-flow">
-                     <svg width="20px" height="20px">
+                     <svg class="ikonssvg" width="20px" height="20px">
                              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                          </svg></a></li>
              </ul>
@@ -114,15 +125,15 @@
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg></a></li>
         <li><a href="" class="link-flow">
-                <svg width="20px" height="20px">
+                <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg></a></li>
         <li><a href="" class="link-flow">
-                <svg width="20px" height="20px">
+                <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg></a></li>
         <li><a href="" class="link-flow">
-                <svg width="20px" height="20px">
+                <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg></a></li>
     </ul>
@@ -139,15 +150,15 @@
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg></a></li>
             <li><a href="" class="link-flow">
-                    <svg width="20px" height="20px">
+                    <svg class="ikonssvg" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg></a></li>
             <li><a href="" class="link-flow">
-                    <svg width="20px" height="20px">
+                    <svg class="ikonssvg" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg></a></li>
             <li><a href="" class="link-flow">
-                    <svg width="20px" height="20px">
+                    <svg class="ikonssvg" width="20px" height="20px">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg></a></li>
         </ul>
@@ -164,15 +175,15 @@
             <use href="./images/symbol-defs.svg#icon-instagram"></use>
         </svg></a></li>
 <li><a href=""  class="link-flow">
-        <svg width="20px" height="20px">
+        <svg class="ikonssvg" width="20px" height="20px">
              <use href="./images/symbol-defs.svg#icon-twitter"></use>
         </svg></a></li>
 <li><a href=""  class="link-flow">
-    <svg width="20px" height="20px">
+    <svg class="ikonssvg" width="20px" height="20px">
             <use href="./images/symbol-defs.svg#icon-facebook"></use>
          </svg></a></li>
 <li><a href=""  class="link-flow">
-    <svg width="20px" height="20px">
+    <svg class="ikonssvg" width="20px" height="20px">
             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
         </svg></a></li>
 </ul>
@@ -185,22 +196,22 @@
  <section class="container services">
      <h2 class="whatwedo">Постоянные клиенты</h2>
      <ul class="clients-list">
-         <li><a href=""><svg>
+         <li class="link-size"><a href=""><svg class="clients-color" width="44px" height="49px">
              <use href="./images/symbol-defs.svg#icon-yaco-1"></use>
          </svg></a></li>
-         <li><a href=""><svg>
+         <li class="link-size"><a href=""><svg class="clients-color" width="40px" height="52px">
              <use href="./images/symbol-defs.svg#icon-tagline-2"></use>
          </svg></a></li>
-         <li><a href=""><svg>
+         <li class="link-size"><a href=""><svg class="clients-color" width="41px" height="42px">
              <use href="./images/symbol-defs.svg#icon-company-3"></use>
          </svg></a></li>
-         <li><a href=""><svg>
+         <li class="link-size"><a href=""><svg class="clients-color" width="79px" height="42px">
              <use href="./images/symbol-defs.svg#icon-foster-4"></use>
          </svg></a></li>
-         <li><a href=""><svg>
+         <li class="link-size"><a href=""><svg class="clients-color" width="59px" height="47px">
              <use href="./images/symbol-defs.svg#icon-brand-5"></use>
          </svg></a></li>
-         <li><a href=""><svg>
+         <li class="link-size"><a href=""><svg class="clients-color" width="88px" height="45px">
              <use href="./images/symbol-defs.svg#icon-logo-6"></use>
          </svg></a></li>
      </ul>
