--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 </main>
 <footer> 
    <div class="footer-container">
+       <div class="content-space">
         <a href="./index.html" class="logo-footer"><span class="footer-web">Web</span>Studio</a>
         <address class="address-decor">г. Киев, пр-т Леси Украинки, 26</address>
     <ul>
@@ -227,6 +228,32 @@
         <li>
     <a href="tel:380961111111" class="footer-phone">+38 096 111 11 11</a></li>
     </ul>
+    </div>
+    <div>
+    <ul>
+        <div class="footer-position">
+        <h3 class="footer-title">присоединяйтесь</h3>
+        <div class="position-services">
+        <li><a href="#" class="footer-link-flow">
+                <svg class="ikonssvg" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg></a></li>
+        <li><a href="" class="footer-link-flow">
+                <svg class="ikonssvg" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg></a></li>
+        <li><a href="" class="footer-link-flow">
+                <svg class="ikonssvg" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg></a></li>
+        <li><a href="" class="footer-link-flow">
+                <svg class="ikonssvg" width="20px" height="20px">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg></a></li>
+         </div>
+        </div>
+    </ul>
+    </div>
 </div>
 </footer>
 </body>
