--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,16 @@
                     <li class="head-items"><a href="" class="links">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="nav-links">
-                <li class="head-items"><a href="mailto:info@devstudio.com" class="phone-color">info@devstudio.com</a></li>
-                <li class="head-items"><a href="tel:380961111111" class="phone-color">+38 096 111 11 11</a></li>
-            </ul>
+        <ul class="nav-links">
+            <li class="head-items"><a href="mailto:info@devstudio.com" class="phone-color"><svg class="phonesvg" width="16px"
+                        height="12px">
+                        <use href="./images/symbol-defs.svg#icon-konvert"></use>
+                    </svg>info@devstudio.com</a></li>
+            <li class="head-items"><a href="tel:380961111111" class="phone-color"><svg class="phonesvg" width="10px"
+                        height="16px">
+                        <use href="./images/symbol-defs.svg#icon-phone"></use>
+                    </svg>+38 096 111 11 11</a></li>
+        </ul>
         </div>
     </header>
 <!--Portfolio -->
@@ -140,16 +146,43 @@
 </section>
 <footer>
     <div class="footer-container">
-        <a href="./index.html" class="logo-footer"><span class="footer-web">Web</span>Studio</a>
-        <address class="address-decor">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
-            <li class="footer-contakt">
-                <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a>
-            </li>
-            <li  class="footer-contakt">
-                <a href="tel:380961111111" class="footer-phone">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        <div class="content-space">
+            <a href="./index.html" class="logo-footer"><span class="footer-web">Web</span>Studio</a>
+            <address class="address-decor">г. Киев, пр-т Леси Украинки, 26</address>
+            <ul>
+                <li class="footer-contakt">
+                    <a href="mailto:info@devstudio.com" class="footer-mail">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:380961111111" class="footer-phone">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <div class="footer-position">
+                    <h3 class="footer-title">присоединяйтесь</h3>
+                    <div class="position-services">
+                        <li><a href="#" class="footer-link-flow">
+                                <svg class="ikonssvg" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg></a></li>
+                        <li><a href="" class="footer-link-flow">
+                                <svg class="ikonssvg" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                </svg></a></li>
+                        <li><a href="" class="footer-link-flow">
+                                <svg class="ikonssvg" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                </svg></a></li>
+                        <li><a href="" class="footer-link-flow">
+                                <svg class="ikonssvg" width="20px" height="20px">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg></a></li>
+                    </div>
+                </div>
+            </ul>
+        </div>
     </div>
 </footer>
 </body>
