--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
     <main>
     <!-- main section -->    
         <section class="main-section"> 
+            <div class="owerlay">
             <div class="container-flex">  
                 <!--фонт задан по макету но не срабатывает помогите разобраться в чем проблемма? спасибо-->
             <h1 class="headline">Эффективные решения для вашего бизнеса</h1>           
             <button class="order">Заказать услугу</button> 
+            </div>
     </div>
         </section>    
     <!--our services -->
