--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li class="pic-border"><svg width="70px" height="70px">
             <use href="./images/symbol-defs.svg#icon-timer2"></use>
         </svg></li>
-        <li class="pic-border"><svg width="70px" height="53px">
+        <li class="pic-border"><svg width="70px" height="px">
             <use href="./images/symbol-defs.svg#icon-dator3"></use>
         </svg></li>
         <li class="pic-border"><svg width="70px" height="70px">
