--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" 
           integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
           crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
  </head>
@@ -198,7 +197,7 @@
  <section class="container services">
      <h2 class="whatwedo">Постоянные клиенты</h2>
      <ul class="clients-list">
-         <li class="link-size"><a href=""><svg class="clients-color" width="44px" height="49px">
+         <li class="link-size"><a href="" class="client-link"><svg class="clients-color" width="44px" height="49px">
              <use href="./images/symbol-defs.svg#icon-yaco-1"></use>
          </svg></a></li>
          <li class="link-size"><a href=""><svg class="clients-color" width="40px" height="52px">
@@ -232,8 +231,8 @@
     </ul>
     </div>
     <div>
-    <ul>
-        <div class="footer-position">
+    <ul class="footer-position">
+        
         <h3 class="footer-title">присоединяйтесь</h3>
         <div class="position-services">
         <li><a href="#" class="footer-link-flow">
@@ -252,7 +251,6 @@
                 <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg></a></li>
-         </div>
         </div>
     </ul>
     </div>
