--- a/index.html
+++ b/index.html
@@ -45,31 +45,35 @@
     </div>
         </section>    
     <!--our services -->
-    <section  class="container services"> 
-        <ul class="service-ikons"><li class="pic-border"><svg width="70px" height="70px">
-            <use href="./images/symbol-defs.svg#icon-antena1"></use>
-        </svg></li>
-        <li class="pic-border"><svg width="70px" height="70px">
-            <use href="./images/symbol-defs.svg#icon-timer2"></use>
-        </svg></li>
-        <li class="pic-border"><svg width="70px" height="px">
-            <use href="./images/symbol-defs.svg#icon-dator3"></use>
-        </svg></li>
-        <li class="pic-border"><svg width="70px" height="70px">
-            <use href="./images/symbol-defs.svg#icon-cosmonavt4"></use>
-        </svg></li></ul>      
+    <section  class="container services">      
 <ul  class="what-we-do-list">
     <li class="service-list">
+        <div class="pic-border">
+        <svg width="70px" height="70px">
+            <use href="./images/symbol-defs.svg#icon-antena1"></use>
+        </svg>
+        </div>
         <h3 class="ourquality">Внимание к деталям</h3>    
         <p class="text-color">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
     </li>
     <li class="service-list">
+        <div class="pic-border"><svg width="70px" height="70px">
+            <use href="./images/symbol-defs.svg#icon-timer2"></use>
+        </svg></div>
         <h3 class="ourquality">Пунктуальность</h3>
         <p class="text-color">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-    </li><li class="service-list">
+    </li>
+    <li class="service-list">
+        <div class="pic-border"><svg width="70px" height="px">
+            <use href="./images/symbol-defs.svg#icon-dator3"></use>
+        </svg></div>
         <h3 class="ourquality">Планирование</h3>
         <p class="text-color">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-    </li><li class="service-list">
+    </li>
+    <li class="service-list">
+        <div class="pic-border"><svg width="70px" height="70px">
+            <use href="./images/symbol-defs.svg#icon-cosmonavt4"></use>
+        </svg></div>
         <h3 class="ourquality">Современные технологии</h3>
         <p class="text-color">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
     </li>
