--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
                          </svg></a></li>
              </ul>
              </div>
-            </li>
-       
+            </li>       
          <li class="collegues-list shadow">
              <img src="images/2.jpg" alt="photo" width="270">
          <div class="name-ocupation">
@@ -129,15 +128,15 @@
                 <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg></a></li>
-        <li><a href="" class="link-flow">
+        <li><a href="#" class="link-flow">
                 <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg></a></li>
-        <li><a href="" class="link-flow">
+        <li><a href="#" class="link-flow">
                 <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg></a></li>
-        <li><a href="" class="link-flow">
+        <li><a href="#" class="link-flow">
                 <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg></a></li>
@@ -201,22 +200,22 @@
  <section class="container services">
      <h2 class="whatwedo">Постоянные клиенты</h2>
      <ul class="clients-list">
-         <li class="link-size"><a href="" class="client-link"><svg class="clients-color" width="44px" height="49px">
+         <li><a href=""  class="link-size"><svg class="clients-color" width="44px" height="49px">
              <use href="./images/symbol-defs.svg#icon-yaco-1"></use>
          </svg></a></li>
-         <li class="link-size"><a href=""><svg class="clients-color" width="40px" height="52px">
+         <li><a href="" class="link-size"><svg class="clients-color" width="40px" height="52px">
              <use href="./images/symbol-defs.svg#icon-tagline-2"></use>
          </svg></a></li>
-         <li class="link-size"><a href=""><svg class="clients-color" width="41px" height="42px">
+         <li><a href="" class="link-size"><svg class="clients-color" width="41px" height="42px">
              <use href="./images/symbol-defs.svg#icon-company-3"></use>
          </svg></a></li>
-         <li class="link-size"><a href=""><svg class="clients-color" width="79px" height="42px">
+         <li><a href="" class="link-size"><svg class="clients-color" width="79px" height="42px">
              <use href="./images/symbol-defs.svg#icon-foster-4"></use>
          </svg></a></li>
-         <li class="link-size"><a href=""><svg class="clients-color" width="59px" height="47px">
+         <li><a href="" class="link-size"><svg class="clients-color" width="59px" height="47px">
              <use href="./images/symbol-defs.svg#icon-brand-5"></use>
          </svg></a></li>
-         <li class="link-size"><a href=""><svg class="clients-color" width="88px" height="45px">
+         <li><a href="" class="link-size"><svg class="clients-color" width="88px" height="45px">
              <use href="./images/symbol-defs.svg#icon-logo-6"></use>
          </svg></a></li>
      </ul>
