--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p class="text-color">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
     </li>
     <li class="service-list">
-        <div class="pic-border"><svg width="70px" height="px">
+        <div class="pic-border"><svg width="70px" height="70px">
             <use href="./images/symbol-defs.svg#icon-dator3"></use>
         </svg></div>
         <h3 class="ourquality">Планирование</h3>
