--- a/index.html
+++ b/index.html
@@ -233,11 +233,9 @@
     <a href="tel:380961111111" class="footer-phone">+38 096 111 11 11</a></li>
     </ul>
     </div>
-    <div>
-    <ul class="footer-position">
-        
-        <h3 class="footer-title">присоединяйтесь</h3>
-        <div class="position-services">
+    <div class="footer-position">
+    <h3 class="footer-title">присоединяйтесь</h3>
+    <ul class="position-services">        
         <li><a href="#" class="footer-link-flow">
                 <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
@@ -254,8 +252,7 @@
                 <svg class="ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg></a></li>
-        </div>
-    </ul>
+    </ul>    
     </div>
 </div>
 </footer>
