--- a/index.html
+++ b/index.html
@@ -200,22 +200,22 @@
  <section class="container services">
      <h2 class="whatwedo">Постоянные клиенты</h2>
      <ul class="clients-list">
-         <li><a href=""  class="link-size"><svg class="clients-color" width="44px" height="49px">
+         <li class="client-links"><a href=""  class="link-size"><svg class="clients-color" width="44px" height="49px">
              <use href="./images/symbol-defs.svg#icon-yaco-1"></use>
          </svg></a></li>
-         <li><a href="" class="link-size"><svg class="clients-color" width="40px" height="52px">
+         <li class="client-links"><a href="" class="link-size"><svg class="clients-color" width="40px" height="52px">
              <use href="./images/symbol-defs.svg#icon-tagline-2"></use>
          </svg></a></li>
-         <li><a href="" class="link-size"><svg class="clients-color" width="41px" height="42px">
+         <li class="client-links"><a href="" class="link-size"><svg class="clients-color" width="41px" height="42px">
              <use href="./images/symbol-defs.svg#icon-company-3"></use>
          </svg></a></li>
-         <li><a href="" class="link-size"><svg class="clients-color" width="79px" height="42px">
+         <li class="client-links"><a href="" class="link-size"><svg class="clients-color" width="79px" height="42px">
              <use href="./images/symbol-defs.svg#icon-foster-4"></use>
          </svg></a></li>
-         <li><a href="" class="link-size"><svg class="clients-color" width="59px" height="47px">
+         <li class="client-links"><a href="" class="link-size"><svg class="clients-color" width="59px" height="47px">
              <use href="./images/symbol-defs.svg#icon-brand-5"></use>
          </svg></a></li>
-         <li><a href="" class="link-size"><svg class="clients-color" width="88px" height="45px">
+         <li class="client-links"><a href="" class="link-size"><svg class="clients-color" width="88px" height="45px">
              <use href="./images/symbol-defs.svg#icon-logo-6"></use>
          </svg></a></li>
      </ul>
