--- a/portfolio.html
+++ b/portfolio.html
@@ -160,19 +160,19 @@
         <div class="footer-position">
             <h3 class="footer-title">присоединяйтесь</h3>
             <ul class="position-services">
-                <li><a href="#" class="footer-link-flow">
+                <li class="footer-link-flow"><a href="#">
                         <svg class="ikonssvg" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                         </svg></a></li>
-                <li><a href="" class="footer-link-flow">
+                <li class="footer-link-flow"><a href="#">
                         <svg class="ikonssvg" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                         </svg></a></li>
-                <li><a href="" class="footer-link-flow">
+                <li class="footer-link-flow"><a href="#">
                         <svg class="ikonssvg" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                         </svg></a></li>
-                <li><a href="" class="footer-link-flow">
+                <li class="footer-link-flow"><a href="#">
                         <svg class="ikonssvg" width="20px" height="20px">
                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                         </svg></a></li>
