--- a/index.html
+++ b/index.html
@@ -237,19 +237,19 @@
     <h3 class="footer-title">присоединяйтесь</h3>
     <ul class="position-services">        
         <li class="footer-link-flow"><a href="#">
-                <svg class="ikonssvg" width="20px" height="20px">
+                <svg class="foot-ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg></a></li>
         <li class="footer-link-flow"><a href="#">
-                <svg class="ikonssvg" width="20px" height="20px">
+                <svg class="foot-ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg></a></li>
         <li class="footer-link-flow"><a href="#">
-                <svg class="ikonssvg" width="20px" height="20px">
+                <svg class="foot-ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg></a></li>
         <li class="footer-link-flow"><a href="#">
-                <svg class="ikonssvg" width="20px" height="20px">
+                <svg class="foot-ikonssvg" width="20px" height="20px">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg></a></li>
     </ul>    
