--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
         </section>    
     <!--our services -->
-    <section  class="container services">      
+    <section  class="container owerflov">      
   <ul  class="what-we-do-list">
     <li class="service-list">
         <div class="pic-border">
