what we du specifics

--- a/index.html
+++ b/index.html
@@ -83,9 +83,20 @@
  <section  class="container services">    
      <h2 class="whatwedo">Чем мы занимаемся</h2>
      <ul class="what-we-do-list">
-        <li class="pic-list"><img src="images/bild.jpg" alt="Bild" width="370"></li>
-        <li class="pic-list"><img src="images/pc.jpg" alt="PC" width="370"></li>
-        <li class="pic-list"><img src="images/tabl.jpg" alt="tabl" width="370"></li>
+    <li class="pic-list"><div class="specifics-pocition"><img src="images/bild.jpg" alt="Bild" width="370">
+    <div class="specifics-place">
+        <p class="specifics">Десктопные приложения</p>
+    </div>
+    </div>
+    </li>
+        <li class="pic-list"><div class="specifics-pocition"><img src="images/pc.jpg" alt="PC" width="370"> <div class="specifics-place">
+        <p class="specifics">Мобильные приложения</p>
+    </div>
+    </div></li>
+        <li class="pic-list"><div class="specifics-pocition"><img src="images/tabl.jpg" alt="tabl" width="370"> <div class="specifics-place">
+        <p class="specifics">Дизайнерские решения</p>
+    </div>
+    </div></li>
     </ul>   
  </section>
 <!-- our collegues-->
