--- a/index.html
+++ b/index.html
@@ -266,5 +266,8 @@
     </div>
 </div>
 </footer>
+<div class="backdrop"><div class="modal">
+    <button class="modal-close-btn"></button>
+</div></div>
 </body>
 </html>
